--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { version = "0.4", features = ["serde"] }
 directories = "5"
 thiserror = "2"
 serde_json = "1"
+tabled = "0.17"
 
 [dev-dependencies]
 assert_cmd = "2"
